Fixed the dialog footer width issue caused by margin overflowing.

--- a/platform/viewer/src/components/SimpleDialog/SimpleDialog.css
+++ b/platform/viewer/src/components/SimpleDialog/SimpleDialog.css
@@ -111,6 +111,7 @@
 .simpleDialog .footer {
   padding: 15px;
   text-align: right;
+  margin: 0;
 }
 
 .simpleDialog .footer .btn {
